<!--
  ~ Copyright 2017 JSBerrocoso
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<resources>
  <string name="app_name">UITesting</string>
  <string name="title_activity_login">Welcome!!</string>

  <!-- Strings related to login -->
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password (optional)</string>
  <string name="action_sign_in">Sign in</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="error_invalid_email">This email address is invalid</string>
  <string name="error_invalid_password">This password is invalid</string>
  <string name="error_incorrect_password">This password is incorrect</string>
  <string name="error_field_required">This field is required</string>

  <string name="action_create_account">Not account yet? Create one</string>
  <string name="action_success">Success!!!</string>
  <string name="action_error">Error!!</string>
  <string name="title_activity_success"/>
  <string name="title_activity_error"/>
  <string name="text_login_successful">Login OK!! :)</string>
  <string name="text_login_error">Login ERROR :(</string>
  <string name="action_create_account_button">Create account</string>


  <string name="hint_first_name">First name</string>
  <string name="hint_last_name">Last name</string>
  <string name="hint_email">Email</string>
  <string name="hint_password">Password</string>
  <string name="sign_up_button_text">Sign Up</string>
  <string name="title_activity_signup">Create your account</string>


</resources>
